new details added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="card card-body py-5">
                 <div class="text-right">
-                    <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Achanta.pdf" target="_blank" class="btn btn-outline-dark">
+                    <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Resume_Sep20.pdf" target="_blank" class="btn btn-outline-dark">
                         <i class="fas fa-cloud"></i> Download Resume
                     </a>
                 </div>
@@ -482,7 +482,7 @@
                     <p><strong>Third Preference: </strong> <a href="https://www.linkedin.com/in/chandrakiran-achanta/" target="_blank" rel="noreferrer"> <i class="fab fa-linkedin"></i> LinkedIn </a> </p>
 
                     <div class="mt-5">
-                            <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Achanta.pdf" target="_blank" class="btn btn-outline-dark">
+                            <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Resume_Sep20.pdf" target="_blank" class="btn btn-outline-dark">
                                 <i class="fas fa-cloud"></i> Download Resume
                             </a>
                     </div>
@@ -528,7 +528,7 @@
         <footer id="main-footer" class="p-5 bg-dark text-white">
             <div class="row">
                 <div class="col-md-6">
-                    <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Achanta.pdf" target="_blank" rel="noreferrer" class="btn btn-outline-light">
+                    <a href="https://chandrakiran-achanta-personal.s3.amazonaws.com/Chandra_Resume_Sep20.pdf" target="_blank" rel="noreferrer" class="btn btn-outline-light">
                         <i class="fas fa-cloud"></i> Download Resume
                     </a>
                 </div>
