--- a/index.html
+++ b/index.html
@@ -97,23 +97,22 @@
                     <div class="col-md-8 p-3 text-justify">
                         <h5>Overview:</h5>
                         <p>
-                          Total 10+ years of IT experience including 7+ years of experience in developing front-end web applications. Experienced in React, Angular, JavaScript (ES5, ES6+). Worked with a variety of industries including a start-up of my own ($320K funded from angel investors). I have great patience and I always thrive for the pixel-perfect UI components. I am naturally good at design and work hard to get the UI team’s efforts into reality. Backend exposure Node JS (Express), Java (only Spring Boot) and a variety of relational databases (MS SQL, MySQL, Postgres).
+                          With over 10 years of experience in the IT industry, I have had the opportunity to learn, grow, lead teams and have a start up of my own. I have a rich experience on front-end development and the key technologies that I enjoy working on are React and JavaScript (ES5, ES6+). I have a good experience on backend technologies as well, including NodeJS (Express), Java (Sprint boot) and a variety of relational databases (MS SQL, MySQL, Postgres). 
                         </p>
 
                         <div class="mt-5">
-                            <h5>Brief History:</h5>
+                          <p>Here are some highlights of my professional career:</p>
                         </div>
-                        <p>After my bachelors degree in Computer Science, I started my career in 2010 as a Programmer in Tata Consultancy Services. I worked directly with business users on web interface embedding Cognos reports. I got experience working with data warehouses, creating views and providing them to the client's customized web portal through cognos. Later I promoted as Systems Engineer and got the responsibility to develop a web portal for another client from scratch with Cognos integration. I was instrumental in delivering the project under the timelines integrated with client's web interface using javascript components. After that I moved to Cognizant Technology Solutions. I have gained experience in web design and developed mobile-first web app as a proof of concept using AngularJS (v.1) and ChartJS, which compliments the existing data visualizations in Tableau. </p>
-                        <p>
-                                These initial years of my work experience gave me a ground to learn and enhance my skills and personality by working on real world projects. Being a born voyager, however, I wanted to explore the world and sharpen my skills by doing a Masters degree. I wanted to explore more in Data Analytics and how it is impacting the businesses across the world. Thus, I enrolled at UT Dallas for my Masters. 
-                        </p>
-                        <p>
-                                In addition to learning from and interacting with bright minds. I got the opportunity to start my own company UNIBEES Inc. (a Delaware c-corp) in January 2016. It is a mobile application that provides information about local campus events, deals, and gigs for students in a real-time setting.This step challenged me to come out of my comfort zone and work hard which culminated in scaling the company from 2 founders to a team of around 10 (peak size) all the while managing 4 product releases. As the technical founder and design-centered guy, I spearheaded everything from logo, color-scheme, typography, wireframes... to the core technology of the company. Designed the first app using ionic framework (hybrid framework uses cordova and Angular1). Also an internal dashboard in React to track effectiveness of the app. All the technology is hosted in AWS cloud environment using EC2, RDS, S3, DynamoDB and other features. We closed $320K in total funding and scaled nationwide. 
-                        </p>
-                        <p>
-                            In July 2019, we weren't unable to secure more funding and unfortunately we closed the enterprise. With all the experience gained, I started working with The Home Depot as a contractor. When started at The Home Depot, the technology was a legacy Javascript (reminding me of my early days of career) with ES5 and few apps with ES6. I have completed multiple feature stories during my time here. I had an opportunity and worked on a complex de-coupled component which can be consumed by multiple apps through event pub-sub mechanism. After that, As the company decided to overhaul technology to the latest React + GraphQL system. I was instrumental in migrating many legacy components to the latest stack. I am currently on complex components (mixture of multiple components), data-source layer along with Unit testing (enzyme, react-testing-library and JEST).
-                        </p>
-
+                        <ul>
+                          <li>Started my career in 2010 as a Programmer. Worked directly with business users on web interface embedding cognos reports</li>
+                          <li>Promoted in (2012) and worked as a senior programmer to develop a web portal with cognos integration. This position gave me a good experience of working with clients and delivering projects under strict timelines</li>
+                          <li>Changed organization in (Dec-2013) and developed a mobile-first web app as a proof of concept using AngularJS (v.1) and ChartJS for Data reporting</li>
+                          <li>After gaining a good experience in software development, moved to the United States in 2015 to pursue a master’s in Business Analytics from the University of Texas at Dallas</li>
+                          <li>Realized my entrepreneurship dream by starting my own company. Was able to close $320K in total funding and scaled nation</li>
+                          <li>After my startup stinct and with new knowledge and experience went back to the corporate world to work on front-end applications using React and graphQL.</li>
+                          <li>Extensively worked on React Hooks, Apollo GraphQL, Context API and re-usable components with npm registry</li>
+                          <li>With my current role, working on migrating legacy code to the latest tech stack by using latest development methodologies (focused on unit testing and clean code) and working on complex components front-end architecture with interaction with data-source layers.</li>
+                        </ul>
                     </div>
                     <div class="col-md-4 p-3">
                             <h5 class="mb-3 mt-3 border-bottom text-success">Frontend</h5>          
